# barrel-length

./: .gitignore  CMakeLists.txt  README.md  barrel.cc
draw/: CMakeLists.txt  LinkDef.h
draw/src/: plotEdep.cpp
gdml/40cm/: mother-single.gdml  mother.gdml
gdml/40cm/Volumes/: All 40cm variant_Shrinkwrap_11.gdml  All 40cm variant_Shrinkwrap_110.gdml  All 40cm variant_Shrinkwrap_111.gdml  All 40cm variant_Shrinkwrap_112.gdml  All 40cm variant_Shrinkwrap_113.gdml  All 40cm variant_Shrinkwrap_114.gdml  All 40cm variant_Shrinkwrap_115.gdml  All 40cm variant_Shrinkwrap_116.gdml  All 40cm variant_Shrinkwrap_117.gdml  All 40cm variant_Shrinkwrap_118.gdml  All 40cm variant_Shrinkwrap_119.gdml  All 40cm variant_Shrinkwrap_12.gdml  All 40cm variant_Shrinkwrap_120.gdml  All 40cm variant_Shrinkwrap_121.gdml  All 40cm variant_Shrinkwrap_122.gdml  All 40cm variant_Shrinkwrap_123.gdml  All 40cm variant_Shrinkwrap_124.gdml  All 40cm variant_Shrinkwrap_125.gdml  All 40cm variant_Shrinkwrap_126.gdml  All 40cm variant_Shrinkwrap_127.gdml  All 40cm variant_Shrinkwrap_128.gdml  All 40cm variant_Shrinkwrap_129.gdml  All 40cm variant_Shrinkwrap_13.gdml  All 40cm variant_Shrinkwrap_130.gdml  All 40cm variant_Shrinkwrap_131.gdml  All 40cm variant_Shrinkwrap_132.gdml  All 40cm variant_Shrinkwrap_133.gdml  All 40cm variant_Shrinkwrap_134.gdml  All 40cm variant_Shrinkwrap_135.gdml  All 40cm variant_Shrinkwrap_136.gdml  All 40cm variant_Shrinkwrap_137.gdml  All 40cm variant_Shrinkwrap_138.gdml  All 40cm variant_Shrinkwrap_139.gdml  All 40cm variant_Shrinkwrap_14.gdml  All 40cm variant_Shrinkwrap_140.gdml  All 40cm variant_Shrinkwrap_141.gdml  All 40cm variant_Shrinkwrap_142.gdml  All 40cm variant_Shrinkwrap_143.gdml  All 40cm variant_Shrinkwrap_144.gdml  All 40cm variant_Shrinkwrap_145.gdml  (+28 more)
gdml/45cm/: mother.gdml
gdml/45cm/Volumes/: Single_Slice_11.14.22_Tower14.gdml  Single_Slice_11.14.22_Tower16.gdml  Single_Slice_11.14.22_Tower21.gdml  Single_Slice_11.14.22_Tower22.gdml  Single_Slice_11.14.22_Tower23.gdml  Single_Slice_11.14.22_Tower26.gdml  Single_Slice_11.14.22_Tower28.gdml  Single_Slice_11.14.22_Tower29.gdml  Single_Slice_11.14.22_Tower30.gdml  Single_Slice_11.14.22_Tower31.gdml  Single_Slice_11.14.22_Tower35.gdml  Single_Slice_11.14.22_Tower39.gdml  (+21 more)
gdml/hybrid/: mother.gdml
gdml/josh-sept/: mother-test.gdml  mother.gdml
gdml/standard/: mother.gdml
gdml/test-sept/: mother-test.gdml  mother.gdml
include/: Constants.hh  DetectorConstruction.hh  EventAction.hh  G01DetectorConstruction.hh  G01PrimaryGeneratorAction.hh  Materials.hh  PrimaryGeneratorAction.hh  RunAction.hh
macros/: batch-test.mac  batch.mac  gps.mac  include_gps.mac  include_gps_down.mac  include_vis.mac  init_vis.mac  vis.mac
slurm/: 40cm-single-test.sh  40cm.sh  45cm.sh  hybrid.sh  standard.sh
src/: ActionInitialization.cc  Constants.cc  DetectorConstruction.cc  EventAction.cc  G01DetectorConstruction.cc  G01PrimaryGeneratorAction.cc  Materials.cc  PrimaryGeneratorAction.cc  RunAction.cc  barrel.cc
(+169 files in other folders)
